--- a/series/programming-go/go-work/index.html
+++ b/series/programming-go/go-work/index.html
@@ -10,7 +10,7 @@
 <meta name=author content="丁鹏">
 <link rel=canonical href=https://blog.srcio.cn/series/programming-go/go-work/>
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.f2c491fce8afa534511b126489022586d3e16bd60074f513e4d5393675d21445.css integrity="sha256-8sSR/OivpTRRGxJkiQIlhtPha9YAdPUT5NU5NnXSFEU=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.5efd5dd4ccdb0cb6e4fc6dc5c40bcd4557f1c016a216d55cc3efedf7c969d7e5.css integrity="sha256-Xv1d1MzbDLbk/G3FxAvNRVfxwBaiFtVcw+/t98lp1+U=" rel="preload stylesheet" as=style>
 <script defer crossorigin=anonymous src=/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG+9vmJ0cTS+ovo0FeA=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://blog.srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
@@ -210,6 +210,9 @@ go work use service-d
 <script>document.querySelector("div.giscus_comments > script").setAttribute("data-theme",localStorage.getItem("pref-theme")?localStorage.getItem("pref-theme"):window.matchMedia("(prefers-color-scheme: dark)").matches?"dark":"light"),document.querySelector("#theme-toggle").addEventListener("click",()=>{let a=document.querySelector("iframe.giscus-frame");a&&a.contentWindow.postMessage({giscus:{setConfig:{theme:localStorage.getItem("pref-theme")?localStorage.getItem("pref-theme")==="dark"?"light":"dark":document.body.className.includes("dark")?"light":"dark"}}},"https://giscus.app")})</script>
 </div>
 <div class=post-right-toc>
+<div class=empty-part></div>
+<div class=toc-part>
+</div>
 </div>
 <div class=clear_float></div>
 </article>
