--- a/series/programming-kubernetes/index.html
+++ b/series/programming-kubernetes/index.html
@@ -8,18 +8,18 @@
 <meta name=keywords content>
 <meta name=description content="Kubernetes 编程 - 博客 · 丁鹏">
 <meta name=author content="丁鹏">
-<link rel=canonical href=https://blog.srcio.cn/series/programming-kubernetes/>
+<link rel=canonical href=https://srcio.cn/series/programming-kubernetes/>
 <meta name=baidu-site-verification content="code-UKq1Ugo12Q">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
 <link crossorigin=anonymous href=/assets/css/stylesheet.e0df13915129c488d0978b527f4f809123449e0ce5f5a2ffe5cdd725b241ba96.css integrity="sha256-4N8TkVEpxIjQl4tSf0+AkSNEngzl9aL/5c3XJbJBupY=" rel="preload stylesheet" as=style>
-<link rel=icon href=https://blog.srcio.cn/images/blog.png>
-<link rel=icon type=image/png sizes=16x16 href=https://blog.srcio.cn/images/blog.png>
-<link rel=icon type=image/png sizes=32x32 href=https://blog.srcio.cn/images/blog.png>
-<link rel=apple-touch-icon href=https://blog.srcio.cn/images/blog.png>
-<link rel=mask-icon href=https://blog.srcio.cn/images/blog.png>
+<link rel=icon href=https://srcio.cn/images/blog.png>
+<link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
+<link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
+<link rel=apple-touch-icon href=https://srcio.cn/images/blog.png>
+<link rel=mask-icon href=https://srcio.cn/images/blog.png>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<link rel=alternate type=application/rss+xml href=https://blog.srcio.cn/series/programming-kubernetes/index.xml>
+<link rel=alternate type=application/rss+xml href=https://srcio.cn/series/programming-kubernetes/index.xml>
 <noscript>
 <style>#theme-toggle,.top-link{display:none}</style>
 <style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
@@ -27,20 +27,20 @@
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-123-45','auto'),ga('send','pageview'))</script><meta property="og:title" content="Kubernetes 编程">
 <meta property="og:description" content="博客 · 丁鹏">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://blog.srcio.cn/series/programming-kubernetes/"><meta property="og:image" content="https://blog.srcio.cn/cover.png"><meta property="og:site_name" content="博客">
+<meta property="og:url" content="https://srcio.cn/series/programming-kubernetes/"><meta property="og:image" content="https://srcio.cn/cover.png"><meta property="og:site_name" content="博客">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://blog.srcio.cn/cover.png">
+<meta name=twitter:image content="https://srcio.cn/cover.png">
 <meta name=twitter:title content="Kubernetes 编程">
 <meta name=twitter:description content="博客 · 丁鹏">
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"系列","item":"https://blog.srcio.cn/series/"},{"@type":"ListItem","position":2,"name":"Kubernetes 编程","item":"https://blog.srcio.cn/series/programming-kubernetes/"}]}</script>
+<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"系列","item":"https://srcio.cn/series/"},{"@type":"ListItem","position":2,"name":"Kubernetes 编程","item":"https://srcio.cn/series/programming-kubernetes/"}]}</script>
 </head>
 <body class=list id=top>
 <script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
 <header class=header>
 <nav class=nav>
 <div class=logo>
-<a href=https://blog.srcio.cn/ accesskey=h title="博客 (Alt + H)">
-<img src=https://blog.srcio.cn/images/blog.png alt aria-label=logo height=25>博客</a>
+<a href=https://srcio.cn/ accesskey=h title="博客 (Alt + H)">
+<img src=https://srcio.cn/images/blog.png alt aria-label=logo height=25>博客</a>
 <div class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -48,37 +48,37 @@
 </div>
 <ul id=menu>
 <li>
-<a href=https://blog.srcio.cn/ title=主页>
+<a href=https://srcio.cn/ title=主页>
 <span>
 <i class="fa-solid fa-home"></i>&nbsp;主页</span>
 </a>
 </li>
 <li>
-<a href=https://blog.srcio.cn/posts/ title=文章>
+<a href=https://srcio.cn/posts/ title=文章>
 <span>
 <i class="fa-solid fa-feather"></i>&nbsp;文章</span>
 </a>
 </li>
 <li>
-<a href=https://blog.srcio.cn/series/ title=系列>
+<a href=https://srcio.cn/series/ title=系列>
 <span>
 <i class="fa-solid fa-swatchbook"></i>&nbsp;系列</span>
 </a>
 </li>
 <li>
-<a href=https://blog.srcio.cn/tags/ title=标签>
+<a href=https://srcio.cn/tags/ title=标签>
 <span>
 <i class="fa-solid fa-tags"></i>&nbsp;标签</span>
 </a>
 </li>
 <li>
-<a href=https://blog.srcio.cn/archives/ title=归档>
+<a href=https://srcio.cn/archives/ title=归档>
 <span>
 <i class="fa-solid fa-folder-minus"></i>&nbsp;归档</span>
 </a>
 </li>
 <li>
-<a href=https://blog.srcio.cn/search/ title>
+<a href=https://srcio.cn/search/ title>
 <span>
 <i class="fa-solid fa-magnifying-glass"></i>&nbsp;</span>
 </a>
@@ -87,7 +87,7 @@
 </nav>
 </header><main class=main>
 <header class=page-header><div class=breadcrumbs><p><a href=/>主页</a>
-<a href=https://blog.srcio.cn/series/><i class="fa-solid fa-angle-right"></i>&nbsp;系列</a>&nbsp;<span><i class="fa-solid fa-angle-right"></i>&nbsp;Kubernetes 编程</span></p>
+<a href=https://srcio.cn/series/><i class="fa-solid fa-angle-right"></i>&nbsp;系列</a>&nbsp;<span><i class="fa-solid fa-angle-right"></i>&nbsp;Kubernetes 编程</span></p>
 </div>
 </header>
 <article class=post-entry>
@@ -116,7 +116,7 @@ apiVersion:apiextensions.k8s.io/v1beta1kind:CustomResourceDefinitionmetadata:nam
 &nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
 </span>
 </span></footer>
-<a class=entry-link aria-label="post link to CRD 简介" href=https://blog.srcio.cn/series/programming-kubernetes/crd/></a>
+<a class=entry-link aria-label="post link to CRD 简介" href=https://srcio.cn/series/programming-kubernetes/crd/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
@@ -149,7 +149,7 @@ package main import ( "k8s.io/client-go/rest" ) func KubeConfig() *rest....</p>
 &nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
 </span>
 </span></footer>
-<a class=entry-link aria-label="post link to 构造 rest.Config 实例" href=https://blog.srcio.cn/series/programming-kubernetes/rest-config/></a>
+<a class=entry-link aria-label="post link to 构造 rest.Config 实例" href=https://srcio.cn/series/programming-kubernetes/rest-config/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
@@ -179,7 +179,7 @@ Clientset 获取 *kubernetes.Clientset
 &nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
 </span>
 </span></footer>
-<a class=entry-link aria-label="post link to 构造 Kubernetes 客户端实例" href=https://blog.srcio.cn/series/programming-kubernetes/kube-client/></a>
+<a class=entry-link aria-label="post link to 构造 Kubernetes 客户端实例" href=https://srcio.cn/series/programming-kubernetes/kube-client/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
@@ -220,7 +220,7 @@ GVR
 &nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
 </span>
 </span></footer>
-<a class=entry-link aria-label="post link to Kubernetes API 设计" href=https://blog.srcio.cn/series/programming-kubernetes/api-design/></a>
+<a class=entry-link aria-label="post link to Kubernetes API 设计" href=https://srcio.cn/series/programming-kubernetes/api-design/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
@@ -247,7 +247,7 @@ GVR
 &nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
 </span>
 </span></footer>
-<a class=entry-link aria-label="post link to Kuberentes Operator" href=https://blog.srcio.cn/series/programming-kubernetes/operator/></a>
+<a class=entry-link aria-label="post link to Kuberentes Operator" href=https://srcio.cn/series/programming-kubernetes/operator/></a>
 </article>
 <article class=post-entry>
 <header class=entry-header>
@@ -276,7 +276,7 @@ GVR
 &nbsp;·&nbsp;&nbsp;<i class="fa-solid fa-user"></i></i>&nbsp;丁鹏
 </span>
 </span></footer>
-<a class=entry-link aria-label="post link to 使用 client-gen 生成 clientset 代码" href=https://blog.srcio.cn/series/programming-kubernetes/client-gen-usage/></a>
+<a class=entry-link aria-label="post link to 使用 client-gen 生成 clientset 代码" href=https://srcio.cn/series/programming-kubernetes/client-gen-usage/></a>
 </article>
 </main>
 <script async src=//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js></script>
@@ -284,7 +284,7 @@ GVR
 <p>
 🔥
 <span>2016 - 2022
-<a href=https://blog.srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
+<a href=https://srcio.cn/>博客 · 丁鹏 · 丁鹏</a>
 </span>
 &nbsp;|&nbsp;
 <span>
