--- a/series/programming-kubernetes/index.html
+++ b/series/programming-kubernetes/index.html
@@ -11,7 +11,7 @@
 <link rel=canonical href=https://srcio.cn/series/programming-kubernetes/>
 <meta name=baidu-site-verification content="code-yW1u8Rg4sz">
 <meta name=google-site-verification content="qnXhMaPNdhaZ4A36ptMVUn-0o111dAsJqugH_0ZCYvM">
-<link crossorigin=anonymous href=/assets/css/stylesheet.a05a54bbf1753764098135f15bdf53bbe8d2fb1a3bd1f2fdd1f237d7eeecb4f7.css integrity="sha256-oFpUu/F1N2QJgTXxW99Tu+jS+xo70fL90fI31+7stPc=" rel="preload stylesheet" as=style>
+<link crossorigin=anonymous href=/assets/css/stylesheet.9d31301a299efbc41e03b14f791064740e135a895670ad7e5689c629fe1a0636.css integrity="sha256-nTEwGime+8QeA7FPeRBkdA4TWolWcK1+VonGKf4aBjY=" rel="preload stylesheet" as=style>
 <link rel=icon href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=16x16 href=https://srcio.cn/images/blog.png>
 <link rel=icon type=image/png sizes=32x32 href=https://srcio.cn/images/blog.png>
@@ -28,9 +28,9 @@
 <meta property="og:description" content="博客 · 丁鹏">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://srcio.cn/series/programming-kubernetes/">
-<meta property="og:image" content="https://srcio.oss-cn-hangzhou.aliyuncs.com/images/kubernetes.svg"><meta property="og:site_name" content="博客">
+<meta property="og:image" content="https://srcio.oss-cn-hangzhou.aliyuncs.com/images/20221025000510.png"><meta property="og:site_name" content="博客">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:image content="https://srcio.oss-cn-hangzhou.aliyuncs.com/images/kubernetes.svg">
+<meta name=twitter:image content="https://srcio.oss-cn-hangzhou.aliyuncs.com/images/20221025000510.png">
 <meta name=twitter:title content="Kubernetes 编程">
 <meta name=twitter:description content="博客 · 丁鹏">
 <script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"系列","item":"https://srcio.cn/series/"},{"@type":"ListItem","position":2,"name":"Kubernetes 编程","item":"https://srcio.cn/series/programming-kubernetes/"}]}</script>
